Se agrego el servicio mostrarNoticias al server y al swagger
